# krx-auto-crawling

./: .dockerignore  .env.example  .gitignore  20251020코스닥기관순매수.xlsx  20251020코스닥외국인순매수.xlsx  20251020코스피기관순매수.xlsx  20251020코스피외국인순매수.xlsx  Justfile.common  Justfile.linux  README.md  agents.md  daily_crawling.py  justfile  main.py  pyproject.toml  requirements.txt  run_krx_netbuy.bat
.github/workflows/: daily_crawl.yml  healthcheck.yml
docker/: Dockerfile  docker-compose.yml
docs/: service_account_migration_guide.md
krx_output/: 20251021코스닥기관순매수.xlsx  20251021코스닥외국인순매수.xlsx  20251021코스피기관순매수.xlsx  20251021코스피외국인순매수.xlsx
output/watchlist/: 20251021_watchlist.csv  20251022_watchlist.csv
output/순매수/: 20251022기관코스닥순매수.xlsx  20251022기관코스피순매수.xlsx  20251022외국인코스닥순매수.xlsx  20251022외국인코스피순매수.xlsx  20251022코스닥기관순매수.xlsx  20251022코스닥외국인순매수.xlsx  20251022코스피기관순매수.xlsx  20251022코스피외국인순매수.xlsx
src/: cli.py  main.py
src/commands/: auth.py  backfill.py  crawl.py  download.py  healthcheck.py
src/core/: logger.py  pipeline.py
src/crawler/: crawler.py  daily_net_value_crawler.py
src/ports/: krx_data_port.py
src/scripts/: dart_fs_updater.py  demo.py  fs_extractor.py  kor_stock_10y_op_collector.py  process_10y_data.py  run_fs_collection.py  test.py
template/: template_일별수급순위정리표.xlsx
tests/: verify_daily_adapter_load.py
tests/e2e/: test_cli.py
tests/fakes/: fake_krx_adapter.py  fake_storage_adapter.py
tests/integration/: test_daily_routine_service.py  test_krx_http_adapter.py  test_master_report_service.py  test_native_krx_adapter.py  (+1 more)
tmp/: test_krx_api.py
(+59 files in other folders)
