[project]
name = "krx-auto-crawling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cloudscraper>=1.2.71",
    "dotenv>=0.9.9",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "tabulate>=0.9.0",
    "xlsxwriter>=3.2.9",
]
