[project]
name = "krx-auto-crawling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cloudscraper>=1.2.71",
    "dotenv>=0.9.9",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyxlsb>=1.0.10",
    "tabulate>=0.9.0",
    "xlsxwriter>=3.2.9",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# src 디렉터리 하위의 모든 패키지를 자동으로 찾도록 설정
where = ["src"]
